--- a/Flyaway/src/main/webapp/WEB-INF/web.xml
+++ b/Flyaway/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -9,12 +9,12 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   <servlet>
-    <display-name>AirportController</display-name>
-  	<servlet-name>AirportController</servlet-name>
-  	<servlet-class>com.controller.AirportController</servlet-class>
+    <display-name>AirportsController</display-name>
+    <servlet-name>AirportsController</servlet-name>
+    <servlet-class>com.controller.AirportsController</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>AirportController</servlet-name> 
+    <servlet-name>AirportsController</servlet-name>
     <url-pattern>/AirportController</url-pattern>
   </servlet-mapping>
 </web-app>
