--- a/Flyaway/pom.xml
+++ b/Flyaway/pom.xml
@@ -40,6 +40,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
       </plugin>
