Account creation works. Now working on admin and user pages once logged in

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+Flyaway/.DS_Store
+Flyaway/src/.DS_Store
+FlyAway/src/main/webapp/.DS_Store
+FlyAway/src/main/webapp/WEB-INF/.DS_Store
 target/
 pom.xml.tag
 pom.xml.releaseBackup
