Finished adding confirmation page and footer for all pages. This project is finally done

--- a/Flyaway/src/main/webapp/WEB-INF/web.xml
+++ b/Flyaway/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>AirportsController</servlet-name>
-    <url-pattern>/AirportController</url-pattern>
+    <url-pattern>/AirportsController</url-pattern>
   </servlet-mapping>
 
 </web-app>
